force-app/main/default/objects/MergeRuleConfig__c/MergeRuleConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configurations for lead merge rules</description>
    <label>Lead Merge Rule Config</label>
</CustomObject>