force-app/main/default/objects/MergeRuleConfig__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <description>Merge decision</description>
    <label>Decision</label>
    <length>80</length>
    <type>Text</type>
</CustomField>