force-app/main/default/objects/MergeRuleConfig__c/fields/Dob__c.field-meta.xml
<CustomField>
    <fullName>Dob__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Date of birth</description>
    <label>Birthdate</label>
    <type>Checkbox</type>
</CustomField>