force-app/main/default/objects/MergeRuleConfig__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <defaultValue>true</defaultValue>
    <description>First name of lead</description>
    <label>First Name</label>
    <type>Checkbox</type>
</CustomField>