force-app/main/default/objects/MergeRuleConfig__c/fields/HasBooking__c.field-meta.xml
<CustomField>
    <fullName>HasBooking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Booking</label>
    <type>Checkbox</type>
</CustomField>