force-app/main/default/objects/MergeRuleConfig__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Last name of lead</description>
    <label>Last Name</label>
    <type>Checkbox</type>
</CustomField>