force-app/main/default/objects/MergeRuleConfig__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mobile phone on lead</description>
    <label>Mobile Phone</label>
    <type>Checkbox</type>
</CustomField>