force-app/main/default/objects/MergeRuleConfig__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Phone field on lead</description>
    <label>Home Phone</label>
    <type>Checkbox</type>
</CustomField>