force-app/main/default/objects/MergeRuleConfig__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Postal code of lead</description>
    <label>Zip/Postal Code</label>
    <type>Checkbox</type>
</CustomField>