force-app/main/default/objects/MergeRuleConfig__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead region</description>
    <label>Region</label>
    <type>Checkbox</type>
</CustomField>