force-app/main/default/objects/MergeRuleConfig__c/fields/Tritonid__c.field-meta.xml
<CustomField>
    <fullName>Tritonid__c</fullName>
    <label>Triton Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>